apps/calibre-web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  ports:
    - port: 8083
      targetPort: 8083
      name: http
  type: ClusterIP
